# KPP_Patch

./: .envrc  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  main.py  pyproject.toml  readme.md
kpp_patch/: __main__.py
kpp_patch/patcher/: common.py  patcher.py  patches.py
kpp_patch/tui/: cli.py  hints.py  interactive.py
kpp_patch/utils/: collections.py
scripts/: update_readme.py
src/patcher/: __init__.py  common.py  patcher.py  patches.py  utils.py
src/tui/: cli.py  hints.py  interactive.py
tests/patcher/: test_collections.py
