[project]
name = "kpp_patch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hbctool @ git+https://github.com/bongtrop/hbctool.git@add-hbc-83-89-and-improve-contribution",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.mypy]
files = "src/"
