[project]
name = "kpp_patch"
version = "0.2.0"
description = "Patching the Kindle's React Native homepage app to remove annoyances"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "notmarek", email = "github@notmarek.com"},
    {name = "Sighery"},
]
maintainers = [
    {name = "notmarek", email = "github@notmarek.com"},
    {name = "Sighery"},
]
requires-python = ">=3.13"
dependencies = [
    "hbctool @ git+https://github.com/Sighery/hbctool.git",
]

[project.urls]
Homepage = "https://github.com/KindleModding/KPP_Patch"
Documentation = "https://github.com/KindleModding/KPP_Patch"
Repository = "https://github.com/KindleModding/KPP_Patch"

[project.scripts]
kpp_patch = "kpp_patch.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kpp_patch*"]

[tool.mypy]
files = "kpp_patch/"
